force-app/main/default/objects/LudoEvent__e/fields/eventData__c.field-meta.xml
<CustomField>
    <fullName>eventData__c</fullName>
    <label>eventData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>