force-app/main/default/objects/LudoEvent__e/fields/ludoBoardId__c.field-meta.xml
<CustomField>
    <fullName>ludoBoardId__c</fullName>
    <label>Ludo board Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>