force-app/main/default/objects/LudoEvent__e/fields/playerType__c.field-meta.xml
<CustomField>
    <fullName>playerType__c</fullName>
    <label>player Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>